envoy/envoy.yaml
# envoy-config.yaml

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains: [ "*" ]
                      typed_per_filter_config:
                        envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          check_settings:
                            context_extensions:
                              virtual_host: service
                      routes:
                        # Route vers "/authz" sans ext_authz
                        - match: {prefix: "/authz" }
                          route:
                            cluster: ext_auth
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        # Route vers "/sign" sans ext_authz
                        - match: { prefix: "/sign" }
                          route:
                            cluster: ext_auth
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true

                        # Route vers "/login" sans ext_authz
                        - match: {prefix: "/login" }
                          route:
                            cluster: go_login
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        # Route vers "/login" sans ext_authz
                        - match: { prefix: "/addUser" }
                          route:
                            cluster: user_db
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true

                        # Route vers "/login" sans ext_authz
                        - match: { prefix: "/validateUser" }
                          route:
                            cluster: user_db
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        # Toutes les autres routes passent par ext_authz
                        - match:
                            prefix: "/"
                          route:
                            cluster: go_service

                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: 127.0.0.1:9000   # Inclure le schéma "http://"
                          cluster: ext_auth
                          timeout: 0.5s
                        path_prefix: "/authz"    # Endpoint pour ext_authz
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: "authorization"
                              - exact: "cookie"   # IMPORTANT pour transmettre le cookie
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: user_db
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: user_db
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8085

    - name: go_service
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: go_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080

    - name: go_login
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: go_login
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081

    - name: ext_auth
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: ext_auth
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9000
